force-app/main/default/objects/Invitation__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipLabel>Invitations</relationshipLabel>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>