force-app/main/default/objects/Invitation__c/fields/Invitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Date__c</fullName>
    <label>Invitation Date</label>
    <type>Date</type>
</CustomField>