force-app/main/default/objects/Invitation__c/fields/RSVP_Date__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Date__c</fullName>
    <label>RSVP Date</label>
    <type>Date</type>
</CustomField>