force-app/main/default/objects/Invitation__c/validationRules/Invitation_Date_Cannot_Be_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Invitation_Date_Cannot_Be_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Invitation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Invitation date connot be in the future</errorMessage>
</ValidationRule>