force-app/main/default/objects/Invitation__c/validationRules/RSVP_Date_Cannot_Be_Before_Invitation.validationRule-meta.xml
<ValidationRule>
    <fullName>RSVP_Date_Cannot_Be_Before_Invitation</fullName>
    <active>true</active>
    <errorConditionFormula>RSVP_Date__c &lt; 	Invitation_Date__c</errorConditionFormula>
    <errorMessage>The RSVP date cannot be before the invitation date</errorMessage>
</ValidationRule>