force-app/main/default/objects/Invitation__c/validationRules/RSVP_Date_Required_on_Response.validationRule-meta.xml
<ValidationRule>
    <fullName>RSVP_Date_Required_on_Response</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, &quot;Confirmed&quot;),
        ISPICKVAL(Status__c, &quot;Declined&quot;)
    ),
    ISBLANK(RSVP_Date__c)
)</errorConditionFormula>
    <errorMessage>The date is required on response on the invitation</errorMessage>
</ValidationRule>