force-app/main/default/objects/Invitation__c/validationRules/Status_Must_Be_Confirmed_On_CheckIn.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Must_Be_Confirmed_On_CheckIn</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Check_In_Time__c)),
    NOT(ISPICKVAL(Status__c, &quot;Attended&quot;))
)</errorConditionFormula>
    <errorMessage>Check-in time can only be set when the invitation status is Attended.</errorMessage>
</ValidationRule>